Kind of a fix for full screen overlays on mobile browsers with disappearing address bars.

--- a/source/less/_overlays.less
+++ b/source/less/_overlays.less
@@ -10,6 +10,8 @@
   right: 0;
   bottom: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
   z-index: @zindex-overlay;
   -webkit-overflow-scrolling: touch;
 
@@ -27,6 +29,8 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
   background-color: #fff;
   transform: translate3d(0, 110%, 0);
   transition: transform @transition-duration-base;
